[tool.poetry]
name = "npi-api"
version = "0.1.0"
description = "RPN calculator API"
authors = ["Alexis THIBAULT <alexis.thibault31@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
fastapi = "^0.110.1"
pydantic = "^2.7.0"
sqlmodel = "^0.0.16"
alembic = "^1.13.1"
psycopg = { extras = ["binary"], version = "^3.1.18" }
pydantic-settings = "^2.2.1"
tenacity = "^8.2.3"
sqlalchemy-utils = "^0.41.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"
ruff = "^0.3.7"
coverage = "^7.4.4"
pre-commit = "^3.7.0"
isort = "^5.13.2"
httpx = "^0.27.0"
black = "^24.4.0"
pytest-cov = "^5.0.0"
factory-boy = "^3.3.0"
sqlalchemy = { extras = ["mypy"], version = "^2.0.29" }
types-sqlalchemy-utils = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
cache_dir = ".pytest_cache"
python_files = "tests_*.py"

[tool.coverage.run]
omit = [
    "alembic/*",
    "**/__init__.py",
    "scripts/*",
    "core/*",
    "tests/*",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.mypy]
strict = true
exclude = ["alembic"]
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin"
]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "W191",
    "B904",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
